test/asm/data-in-ram.asm
SECTION "code", WRAM0
	xor a
SECTION "data", WRAMX
	db 42
